HLT-3589 Fix for watermark overlapping and extras hiding

--- a/src/main/webapp/bundles/health_v2/less/benefitsStep.less
+++ b/src/main/webapp/bundles/health_v2/less/benefitsStep.less
@@ -130,7 +130,12 @@
         }
     }
 }
+.title {
+    position: relative;
+    z-index: 2;
+}
 .situation-wrapper {
+    z-index: 1;
     position: absolute;
     bottom: 0;
     right: 0;
